WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130888
[WK2][EFL] Fix wrong parameter name in ewk_view_user_agent_set()
https://bugs.webkit.org/show_bug.cgi?id=130888
Summary
[WK2][EFL] Fix wrong parameter name in ewk_view_user_agent_set()
Jinwoo Song
Reported
2014-03-27 23:14:38 PDT
ewk_view_user_agent_set() has a wrong parameter name in the header file. EAPI Eina_Bool ewk_view_user_agent_set(Evas_Object *o, const char *encoding);
Attachments
Patch
(1.28 KB, patch)
2014-03-27 23:15 PDT
,
Jinwoo Song
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jinwoo Song
Comment 1
2014-03-27 23:15:52 PDT
Created
attachment 228027
[details]
Patch
Jinwoo Song
Comment 2
2014-03-27 23:22:12 PDT
Comment on
attachment 228027
[details]
Patch Clearing flags on attachment: 228027 Committed
r166399
: <
http://trac.webkit.org/changeset/166399
>
Jinwoo Song
Comment 3
2014-03-27 23:22:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug