[WK2][EFL] Fix wrong parameter name in ewk_view_user_agent_set() https://bugs.webkit.org/show_bug.cgi?id=130888

Reviewed by Gyuyoung Kim.

* UIProcess/API/efl/ewk_view.h:

Canonical link: https://commits.webkit.org/148915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166399 268f45cc-cd09-0410-ab3c-d52691b4dbfc