Source/WebKit2/UIProcess/API/efl/ewk_view.h
@@ -682,7 +682,7 @@ EAPI const char *ewk_view_user_agent_get(const Evas_Object *o);
  *
  * @return @c EINA_TRUE on success @c EINA_FALSE otherwise
  */
-EAPI Eina_Bool ewk_view_user_agent_set(Evas_Object *o, const char *encoding);
+EAPI Eina_Bool ewk_view_user_agent_set(Evas_Object *o, const char *user_agent);
 
 /**
  * Searches and hightlights the given string in the document.
